fix text overflowing on item description

--- a/src/app/product-detail/product-detail.component.scss
+++ b/src/app/product-detail/product-detail.component.scss
@@ -17,6 +17,7 @@
   color: $meli-grey-text;
   p {
     max-width: 800px;
+    word-break: break-all;
   }
 }
 
